# givingtuesday-datamart

./: .gitignore  LICENSE  README.md  paths.ini  pyproject.toml  raw_notes.md  requirements.txt
data/results/: giving_tuesday_all_text_fields.parquet
docs/: backbone-plan.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/filing/: route.ts
frontend/src/app/api/orgs/[ein]/: route.ts
frontend/src/app/api/orgs/[ein]/grants-given/: route.ts
frontend/src/app/api/orgs/[ein]/grants-received/: route.ts
frontend/src/app/api/search/: route.ts
frontend/src/app/orgs/[ein]/: OrgPageClient.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/layout/: Header.tsx  Logo.tsx
frontend/src/components/org/: BackToSearchLink.tsx  FoundationActivities.tsx  GrantsAgGrid.tsx  GrantsFilterBar.tsx  GrantsGivenTable.tsx  GrantsReceivedTable.tsx  GrantsTable.tsx  LineageFooter.tsx  OrgHeader.tsx  OrgIdentityCard.tsx  OrgMetadata.tsx  OrgNarrative.tsx
frontend/src/components/search/: DafFilterToggle.tsx  EligibilityFilters.tsx  SearchBar.tsx  SearchModeToggle.tsx  SearchResults.tsx  SearchResultsClient.tsx  SearchTabs.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  EmptyState.tsx  LoadingSpinner.tsx  Modal.tsx  Pagination.tsx
frontend/src/hooks/: useGrants.ts  useOrg.ts  useSearch.ts
frontend/src/lib/: db.ts
frontend/src/lib/queries/: grants.ts  orgs.ts  search.ts
frontend/src/lib/utils/: formatters.ts  validation.ts
frontend/src/types/: grant.ts  org.ts
givingtuesday_datamart/: grant_matching.py  ingestion.py  matching_records_experiment.py  validation.py  write_data_to_sql.py
givingtuesday_datamart/_internal/: __init__.py  address_cleaning.py  config.py  db.py  logger.py  parquet_cache.py
givingtuesday_datamart/canonical/: __init__.py  build.py
givingtuesday_datamart/client/: __init__.py  client.py  models.py
givingtuesday_datamart/exploratory/: debug_missing_grantors.py
givingtuesday_datamart/sources/: __init__.py  __main__.py  registry.py  resolver.py  spec.py
givingtuesday_datamart/sql_queries/: calculated_contributions_explorations.sql  generic_non_profit_queries.sql  non_profit_text_joins.sql  unique_fields_for_grants.sql  useful_queries.sql
scripts/: create_tables.py
vdl_project_template/data_enrichment/: enrich_data.py
vdl_project_template/data_preprocessing/: process_data.py
vdl_project_template/player_building/: build_network.py  build_player.py  decorate_player.py  player_attribute_settings.xlsx  run_full_player.py
