[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "givingtuesday-datamart"
version = "0.1.0"
description = "Internal data backbone for the Giving Tuesday Datamart — staging, canonical surfaces, grant matching, and a read-only Python client."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vibrant Data Labs"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Required at every install — these are what the read-only client needs.
# Consumers like vdl-tools that only use ``givingtuesday_datamart.client``
# get a clean, dependency-light install. Heavier modules (ingestion,
# canonical, grant_matching) require the ``ingest`` extra below.
dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary",
]

[project.optional-dependencies]
# Everything needed to run the ingestion + canonical + grant-matching paths.
# Pulled in via ``pip install 'givingtuesday-datamart[ingest]'``. The
# pipeline modules vendor the small slice of vdl-tools they used to import
# (logger, config loader, sqlalchemy session, parquet_cache, address
# cleaning) into ``givingtuesday_datamart._internal``, so vdl-tools is no
# longer a dependency in either direction.
ingest = [
    "boto3>=1.34.0",
    "pandas>=2.0.0,<3.0.0",
    "polars",
    "pyarrow>=15.0.0,<23.0.0",
    "recordlinkage",
    "requests",
    "tqdm",
    "wget",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.github",
    "/docs",
    "/frontend",
    "/scripts",
    "/data",
    "/raw_notes.md",
    "*.pyc",
    "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["givingtuesday_datamart"]
